
Version (CVS) 
-------------

XML:    Fixed issue with mapping multiple elements with the same name but
        different namespace to separate fields.
        (kvisco - 20030423)

XML:    Added support for constructor arguments for attribute mapped fields.
        Information will be added to the documentation soon.
        (kvisco - 20030422)

JDO:    Fixed Bug 1261 and 1253 : In case of CALL SQL binding param inside parens results adds extra paren
        (Mickael - 20030415)

JDO:    Fixed bug 1290: Possible bug in object value rollback of primitive types. 
        (Bruce - 20030413)

JDO:    Fixed Bug 1106 : JDO mapping with collection="array" does not work
        (Mickael - 20030325)

JDO:    Fixed Bug 1045 : date->char[yyyy-MM-dd hh:mm:ss] parameterized type not supported
        (Mickael - 20030325)

XML:    Added initial support for wrapper elements, which are now supported 
        via the bind-xml "location" attribute. More information will be
        available in the docs, hopefully soon. 
        (kvisco - 20030313)

XML:    Applied Edwin Dankert's patch to DatatypeHandler (used by the 
        XMLInstance2Schema tool) to support empty string values.
        (kvisco - 20030312)
        
XML:    Fixed Bug 1232: The facet 'MinInclusive' was not handle properly for decimal
        datatype.
        (Arnaud - 20030225)

JDO:    Fixed Bug 1165 : Castor closes connections too early with global transactions
        (Mickael - 20030221)

Version 0.9.4.3, February 12, 2003
----------------------------------

XML:    Fixed the handling of include in the binding file. Problem reported
        by Brett Ramdeen [bramdeen@certapay.com] 
        (Arnaud - 20030210)
 
JDO:    Fixed Bug 1151 : Use Complex primary key crashed
        (Mickael - 20030207)

XML:    Fixed issue when processing the annotations of element and attribute 
        references for creating Javadoc. If local annoations do not exist,